GearsetPOC/force-app/main/default/objects/SalesforceMember__x/SalesforceMember__x.object-meta.xml
<CustomObject>
    <description>SalesforceMember</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMember</externalName>
    <externalRepository>SalesforceId</externalRepository>
    <label>Loyalty Member</label>
    <pluralLabel>Loyalty Members</pluralLabel>
</CustomObject>