GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/MembershipExpiry__c.field-meta.xml
<CustomField>
    <fullName>MembershipExpiry__c</fullName>
    <description>MembershipExpiry</description>
    <externalDeveloperName>MembershipExpiry</externalDeveloperName>
    <label>Membership expiry</label>
    <type>DateTime</type>
</CustomField>