GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/NumberOfTrips__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTrips__c</fullName>
    <label>Number of trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>