GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>Registration date</label>
    <type>DateTime</type>
</CustomField>