GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/RewardPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>RewardPointsBalance__c</fullName>
    <label>Reward points balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>