GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SalesforceId</description>
    <externalDeveloperName>SalesforceId</externalDeveloperName>
    <label>Name of Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SalesforceMember</relationshipName>
    <type>Lookup</type>
</CustomField>