GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/StatusPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>StatusPointsBalance__c</fullName>
    <label>Status points balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>