GearsetPOC/force-app/main/default/objects/SalesforceMember__x/fields/SubTierDescription__c.field-meta.xml
<CustomField>
    <fullName>SubTierDescription__c</fullName>
    <description>SubTierDescription</description>
    <externalDeveloperName>SubTierDescription</externalDeveloperName>
    <label>Sub-tier description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>