GearsetPOC/force-app/main/default/objects/SalesforceMember__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RegistrationDate__c</columns>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>SalesforceId__c</columns>
    <columns>MemberCard__c</columns>
    <columns>RewardPointsBalance__c</columns>
    <columns>TierDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Loyalty</label>
</ListView>